--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "my-react-app",
+  "name": "balconist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primer/octicons-react": "^19.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
